--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
 body {
-   
+   font-family: Arial, Helvetica, sans-serif;
+   text-align: center;
+   background: lightpink;
+   margin: 0;
+   padding: 20px;
+  }
+
+  header{
+    background-color: #ffb6c1;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
   }
