--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,15 @@ body {
     transform-style: preserve-3d;
     transition: transform 0.5s;
   }
+
+  .card.flip{
+    transform: rotateY(180deg);
+  }
+
+  .card .front, .card .back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    border-radius: 10px;
+  }
