--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,13 @@ body {
     backface-visibility: hidden;
     border-radius: 10px;
   }
+
+  .card .front{
+    background-color: #ff69b4;
+  }
+
+  .card .back img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
